paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c6b/sample_004/target.compile.log
error[E0133]: call to unsafe function `std::ptr::const_ptr::<impl *const T>::add` is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c6b/sample_004/target.rs:21:16
   |
21 |     let end1 = a.as_ptr().add(3);
   |                ^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `std::ptr::const_ptr::<impl *const T>::add` is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c6b/sample_004/target.rs:22:16
   |
22 |     let end2 = a.as_ptr().add(3);
   |                ^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.